# nu-mcp

./: .editorconfig  .gitignore  .laio.yaml  Cargo.toml  PR_SUMMARY.md  README.md  commit-msg.txt  data.json  devenv.nix  devshell.toml  flake.nix  llms.txt  opencode.json  readonly-cli-tools.json  rust-multiarch.nix  test_hang.nu
.github/: dependabot.yml  repo-config.yaml
.github/workflows/: ci-nu-mcp.yaml  ci-tools.yaml  ci.yaml  ci.yml  release.yaml  update-flake-lock.yaml
Formula/: nu-mcp.rb
data/: aarch64-darwin.json  aarch64-linux.json  darwin.json  linux.json  nix.json  x86_64-darwin.json  x86_64-linux.json
docs/: README.md  best-practices.md  configuration.md  llm-tool-implementation-guide.md  multiple-instances.md  run_description.txt  run_nushell_description.txt  security.md  shell_description.txt  testing.md  tool-development.md  tool-discovery.md
docs/implementation-plans/: README.md  argocd-cli-auth.md  c5t-implementation-plan.md  github-mcp-tool.md  k8s-delegation-feature.md  safe-command-allowlist-expansion.md  tmux-phase4-session-creation.md  tmux-window-pane-management.md
nix/: ci.nix  dev.nix  devenv.nix  packages.nix
src/: cli_test.rs  config_test.rs  filter.rs  filter_test.rs  handler.rs  handler_test.rs  lib.rs  main.rs  tools.rs  tools_test.rs
src/cli/: mod.rs  mod_test.rs
src/config/: mod.rs  mod_test.rs
src/execution/: mock.rs  mock_test.rs  mod.rs  mod_test.rs  nushell.rs  nushell_test.rs  osc133.rs  persistent.rs  persistent_test.rs
src/mcp/: formatter.rs  formatter_test.rs  mod.rs  mod_test.rs  router.rs  router_test.rs  tests.rs
src/security/: README.md  mod.rs  mod_test.rs  safe_command_patterns.txt
src/tools/: discovery.rs  discovery_test.rs  execution.rs  execution_test.rs  mock.rs  mod.rs  mod_test.rs
test/tools/: not_a_script.txt  test_empty.nu
tests/: cli.rs  filter.rs  handler.rs  main.rs  tools.rs
tools/: run_all_tests.nu  ticker.nu  weather.nu
tools/_common/: README.md  toon.nu
tools/argocd/: README.md  applications.nu  cluster.nu  formatters.nu  (+4 more)
(+117 files in other folders)
