[package]
name = "nu-mcp"
version = "0.5.0"
description = ""
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
regex = "1.11.1"
rmcp-macros = "0.12.0"
schemars = "1.1.0"
serde_json = "1.0.146"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.rmcp]
version = "0.12.0"
features = ["transport-io"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dev-dependencies]
tokio-util = "0.7.17"
