[package]
name = "nu-mcp"
version = "0.6.0"
description = ""
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
regex = "1.11.1"
rmcp-macros = "0.16.0"
schemars = "1.2.1"
serde_json = "1.0.149"
tracing = "0.1.44"

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]

[dependencies.tokio]
version = "1.49.0"
features = ["full"]

[dependencies.rmcp]
version = "0.16.0"
features = ["transport-io"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.5.60"
features = ["derive"]

[dev-dependencies]
tokio-util = "0.7.18"
