[package]
name = "nu-mcp"
version = "0.7.1"
description = ""
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
portable-pty = "0.9.0"
regex = "1.12.3"
rmcp-macros = "1.4.0"
schemars = "1.2.1"
serde_json = "1.0.149"
strip-ansi-escapes = "0.2"
tracing = "0.1.44"

[dependencies.tracing-subscriber]
version = "0.3.23"
features = ["env-filter"]

[dependencies.tokio]
version = "1.51.1"
features = ["full"]

[dependencies.rmcp]
version = "1.4.0"
features = ["transport-io"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.6.0"
features = ["derive"]

[dev-dependencies]
serial_test = "3.4.0"
tokio-util = "0.7.18"
